force-app/main/default/objects/Action_Plan_Snapshot__c/Action_Plan_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Action Plan Snapshot</label>
    <nameField>
        <label>Action Plan Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plan Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>