force-app/main/default/objects/Action_Plan_Snapshot__c/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <label>Action Plan</label>
    <referenceTo>Action_Plan__c</referenceTo>
    <relationshipLabel>Action Plan Snapshots</relationshipLabel>
    <relationshipName>Action_Plan_Snapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>