force-app/main/default/objects/Action_Plan_Snapshot__c/fields/Employee_Response__c.field-meta.xml
<CustomField>
    <fullName>Employee_Response__c</fullName>
    <label>Employee Response</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>