force-app/main/default/objects/Action_Plan_Snapshot__c/fields/Metric_Skill__c.field-meta.xml
<CustomField>
    <fullName>Metric_Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Metric-Skill</label>
    <referenceTo>Certification_Rating__c</referenceTo>
    <relationshipLabel>Action Plan Snapshots</relationshipLabel>
    <relationshipName>Action_Plan_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>