force-app/main/default/objects/Action_Plan_Snapshot__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>