force-app/main/default/objects/Action_Plan_Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action_Step__c</columns>
    <columns>Action_Plan__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Action_Plan__c</field>
        <operation>equals</operation>
        <value>AP-000034</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>